--- a/templates/intro.html
+++ b/templates/intro.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
+        <div class="card intro-card">
             <h1>SQL 문제풀이 학습 플랫폼</h1>
             <p>기업 실무 데이터를 기반으로 한 SQL 퀴즈입니다.<br>아래 버튼을 눌러 시작하세요!</p>
-            <a href="/quiz/1" class="btn-start">SQL 퀴즈 시작하기 🚀</a>
+            <div class="button-wrapper">
+                <a href="/quiz/1" class="btn-start">SQL 퀴즈 시작하기 🚀</a>
+            </div>
         </div>
     </div>
 </body>
