--- a/templates/intro.html
+++ b/templates/intro.html
@@ -7,12 +7,10 @@
 </head>
 <body>
     <div class="container intro-container">
-        <section class="section intro-section">
-            <h1>SQL 문제풀이 학습 플랫폼</h1>
-            <p>기업 실무 데이터를 기반으로 한 SQL 퀴즈입니다.<br>아래 버튼을 눌러 시작하세요!</p>
-            <div class="button-wrapper">
-                <a href="/quiz/1" class="btn-start">SQL 퀴즈 시작하기 🚀</a>
-            </div>
+        <section class="intro-section">
+            <h1>SQL 퀴즈 연습 플랫폼</h1>
+            <p>실제 데이터 기반 문제를 풀며<br>SQL 문제해결 능력을 키워보세요.</p>
+            <a href="/quiz/1" class="btn-start">시작하기 🚀</a>
         </section>
     </div>
 </body>
