--- a/templates/intro.html
+++ b/templates/intro.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container intro-container">
-        <section class="intro-section">
+        <section class="card intro-card">
             <h1>SQL 퀴즈 연습</h1>
             <p>실제 데이터 기반 문제를 풀며 SQL 문제해결 능력을 키워보세요.</p>
             <a href="/quiz/1" class="btn-start">시작하기 🚀</a>
