--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -70,11 +70,9 @@
             {% endif %}
         
         {% else %}
-            <div class="complete-wrapper">
-                <h2>🎉 모든 문제를 완료했습니다!</h2>
-                <p>SQL 실력을 한 단계 업그레이드 했습니다!</p>
-                <a href="/" class="btn-start">처음으로 돌아가기</a>
-            </div>
+            <script>
+                window.location.href = "/complete";
+            </script>
         {% endif %}
 
     </div>
