--- a/templates/complete.html
+++ b/templates/complete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎉 완료</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?v=1">
 </head>
 <body>
     <div class="container complete-container">
@@ -14,4 +14,3 @@
     </div>
 </body>
 </html>
-  
