--- a/templates/complete.html
+++ b/templates/complete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎉 완료</title>
-    <link rel="stylesheet" href="/static/style.css?v=1">
+    <link rel="stylesheet" href="/static/style_v2.css">
 </head>
 <body>
     <div class="container complete-container">
