--- a/templates/intro.html
+++ b/templates/intro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/style_v2.css">
 </head>
 <body>
-    <div class="container intro-container">
+    <div class="container intro-container" style="text-align: center;">
         <h1>SQL 퀴즈 연습</h1>
         <p>실제 데이터 기반 문제를 풀며 SQL 문제해결 능력을 키워보세요.</p>
         <a href="/quiz/1" class="btn-start">시작하기 🚀</a>
