--- a/templates/complete.html
+++ b/templates/complete.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/style_v2.css">
 </head>
 <body>
-    <div class="container complete-container">
+    <div class="container complete-container" style="text-align: center;">
         <h1>🎉 모든 문제를 완료했습니다!</h1>
         <p>SQL 실력을 한층 강화했어요.<br>다시 풀고 싶다면 처음으로 돌아가보세요!</p>
         <a href="/" class="btn-start">처음으로 돌아가기</a>
