--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -67,8 +67,8 @@
     {% endif %}
 
     {% if correct %}
-      <div class="next-button-wrapper">
-        <a href="/quiz/{{ q + 1 }}" class="btn-next">다음 문제로 ➡️</a>
+      <div class="button-group">
+        <a href="/quiz/{{ q + 1 }}" class="btn-next">다음 문제로</a>
       </div>
     {% endif %}
   </div>
