--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -32,7 +32,7 @@
             <input type="hidden" name="trial" value="{{ trial }}">
             <div class="button-group">
                 <button type="submit" class="btn-run">실행하기</button>
-                <button type="button" class="btn-pass" onclick="fillAnswer('{{ problem.answer | escapejs }}')">정답보기</button>
+                <button type="button" class="btn-pass" onclick='fillAnswer({{ problem.answer | tojson | safe }})'>정답보기</button>
             </div>
         </form>
 
